# snowflake-utilities

./: .gitignore  README.md  add_to_db.py  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: demo_GettingStarted.ipynb
proxy/: conf
src/: SnowflakeConnector.py  __init__.py  config.py  models.py  routes.py  utils.py
src/templates/: base.html  login.html  register.html  upload.html
web/: Dockerfile  pyproject.toml  run.py
web/src/: __init__.py  config.py  forms.py  routes.py  snowflake.db  utils.py
web/src/templates/: base.html  home.html  login.html  register.html  upload.html
