[tool.poetry]
name = "snowflakeconnector"
version = "0.1.0"
description = "Snowflake connector utilities for interfacing with Snowflake databases"
authors = ["sudheer-akkio <sudheer@akkio.com>"]
license = "Akkio"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
snowflake-connector-python = "^3.1.0"
SQLAlchemy = "^2.0.19"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
